--- a/style.css
+++ b/style.css
@@ -1,3 +1,14 @@
+
 h1 {
-    color: red;
+    color: blue;
+}
+
+.text {
+    background-color: dodgerblue;
+    color: salmon;
+    border: dotted 4px red;
+}
+#paragraf {
+    color: brown;
+    background-color: aqua;
 }
